fixed for wrapping

--- a/components/product/_product.scss
+++ b/components/product/_product.scss
@@ -256,6 +256,7 @@
 .productSummaryGrid {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .productSummary {
